After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 698521 - fix a compiler warning
fix a compiler warning
Status: RESOLVED FIXED
Product: gobject-introspection
Classification: Platform
Component: general
unspecified
Other Linux
: Normal minor
: ---
Assigned To: gobject-introspection Maintainer(s)
gobject-introspection Maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2013-04-21 16:58 UTC by Christian Persch
Modified: 2015-02-07 16:48 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Add printf attribute (702 bytes, patch)
2013-04-21 17:00 UTC, Christian Persch
accepted-commit_now Details | Review

Description Christian Persch 2013-04-21 16:58:48 UTC
While compiling vte, I got this warning:

Vte-2.90.c: In Funktion »escaped_printf«:
Vte-2.90.c:55:3: Warnung: Funktion könnte möglicher Kandidat für Formatattribut »gnu_printf« sein [-Wmissing-format-attribute]

Attached patch fixes this.
Comment 1 Christian Persch 2013-04-21 17:00:00 UTC
Created attachment 242089 [details] [review]
Add printf attribute
Comment 2 Colin Walters 2013-05-02 21:27:29 UTC
Review of attachment 242089 [details] [review]:

Looks good.
Comment 3 Christian Persch 2013-05-05 20:57:20 UTC
Pushed to master.
Comment 4 André Klapper 2015-02-07 16:48:27 UTC
[Mass-moving gobject-introspection tickets to its own Bugzilla product - see bug 708029. Mass-filter your bugmail for this message: introspection20150207 ]