Add printf attribute

This fixes a compiler warning when using -Wmissing-format-attribute.

https://bugzilla.gnome.org/show_bug.cgi?id=698521